@@ -1,19 +1,16 @@
 package daripher.autoleveling.loot.condition;
 
-import com.google.common.collect.ImmutableSet;
 import com.mojang.serialization.Codec;
 import com.mojang.serialization.MapCodec;
 import com.mojang.serialization.codecs.RecordCodecBuilder;
 import daripher.autoleveling.event.MobsLevelingEvents;
-import daripher.autoleveling.init.AutoLevelingLootItemConditions;
 import java.util.Set;
+import net.minecraft.util.context.ContextKey;
 import net.minecraft.world.entity.Entity;
 import net.minecraft.world.entity.LivingEntity;
 import net.minecraft.world.level.storage.loot.LootContext;
-import net.minecraft.world.level.storage.loot.parameters.LootContextParam;
 import net.minecraft.world.level.storage.loot.parameters.LootContextParams;
 import net.minecraft.world.level.storage.loot.predicates.LootItemCondition;
-import net.minecraft.world.level.storage.loot.predicates.LootItemConditionType;
 import org.jetbrains.annotations.NotNull;
 
 public record LevelCheck(int min, int max) implements LootItemCondition {
@@ -26,21 +23,17 @@ public record LevelCheck(int min, int max) implements LootItemCondition {
                       Codec.INT.optionalFieldOf("max", 0).forGetter(LevelCheck::max))
                   .apply(instance, LevelCheck::new));
 
-  public static LootItemConditionType createType() {
-    return new LootItemConditionType(CODEC);
+  public @NotNull MapCodec<LevelCheck> codec() {
+    return CODEC;
   }
 
-  public @NotNull LootItemConditionType getType() {
-    return AutoLevelingLootItemConditions.LEVEL_CHECK.get();
-  }
-
-  public @NotNull Set<LootContextParam<?>> getReferencedContextParams() {
-    return ImmutableSet.of(LootContextParams.THIS_ENTITY);
+  public @NotNull Set<ContextKey<?>> getReferencedContextParams() {
+    return Set.of(LootContextParams.THIS_ENTITY);
   }
 
   public boolean test(LootContext context) {
-    if (!context.hasParam(LootContextParams.THIS_ENTITY)) return false;
-    Entity entity = context.getParam(LootContextParams.THIS_ENTITY);
+    if (!context.hasParameter(LootContextParams.THIS_ENTITY)) return false;
+    Entity entity = context.getParameter(LootContextParams.THIS_ENTITY);
     if (!MobsLevelingEvents.hasLevel(entity)) return false;
     int level = MobsLevelingEvents.getLevel((LivingEntity) entity) + 1;
     return level >= min && level <= max;
